[gd_scene load_steps=2 format=3 uid="uid://c654u78tlg4sl"]

[ext_resource type="Script" path="res://Components/bar.gd" id="1_2rp7q"]

[node name="Bar" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1220.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2rp7q")

[node name="Button1" type="Button" parent="."]
layout_mode = 2

[node name="Button2" type="Button" parent="."]
layout_mode = 2

[node name="Button3" type="Button" parent="."]
layout_mode = 2

[node name="Button4" type="Button" parent="."]
layout_mode = 2
